Fix crash in Daap::Reader::loginFinished()

BUG: 284186
FIXED-IN: 2.7